apps/search-derive/tests/ui/value_missing_derive.stderr
error[E0277]: `Tier` is not a valid value for a `flusso_search::kind::Keyword` field
  --> tests/ui/value_missing_derive.rs:16:12
   |
16 |     email: Tier,
   |            ^^^^ unsupported field type
   |
help: the trait `FlussoValue<flusso_search::kind::Keyword>` is not implemented for `Tier`
  --> tests/ui/value_missing_derive.rs:7:1
   |
 7 | enum Tier {
   | ^^^^^^^^^
   = note: use a built-in leaf type, or add `#[derive(FlussoValue)]` (with the matching kind) to `Tier`
   = help: the following other types implement trait `FlussoValue<K>`:
             `&str` implements `FlussoValue<flusso_search::kind::Keyword>`
             `&str` implements `FlussoValue<flusso_search::kind::Text>`
             `f32` implements `FlussoValue<flusso_search::kind::Number>`
             `f64` implements `FlussoValue<flusso_search::kind::Number>`
             `i16` implements `FlussoValue<flusso_search::kind::Number>`
             `i32` implements `FlussoValue<flusso_search::kind::Number>`
             `i64` implements `FlussoValue<flusso_search::kind::Number>`
             `i8` implements `FlussoValue<flusso_search::kind::Number>`
           and $N others
note: required by a bound in `__assert_field_value`
  --> tests/ui/value_missing_derive.rs:16:12
   |
16 |     email: Tier,
   |            ^^^^ required by this bound in `__assert_field_value`
